# devops

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/scripts/: extract_version.sh
.github/workflows/: changelog.yml  release.yml  test.yml
src/foo/: __init__.py  bar.py
tests/test_foo/: test_bar.py
