[build-system]
requires = [
    "setuptools>=30.3.0",
    "wheel",
    "setuptools_scm[toml]",
    "semver==3.0.0dev2"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
# Runs coverage.py through use of the pytest-cov plugin
# An xml report is generated and results are output to the terminal
addopts = "--cov --cov-report xml:cov.xml --cov-report term"
# Sets the minimum allowed pytest version
minversion = 5.0
# Sets the path where test files are located (Speeds up Test Discovery)
testpaths = ["tests"]

[tool.coverage.run]
# Due to a strange bug with xml output of coverage.py not writing the full-path
# of the sources, the full root directory is presented as a source alongside
# the main package. As a result any importable Python file/package needs to be
# included in the omit
source = [
    "foo",
    ".",
]
# Excludes the following directories from the coverage report
omit = [
    "tests/*",
    "setup.py",
]

[tool.isort]
profile = "black"
line_length = 79
# Sets the imports which should appear as third-party packages
known_third_party = [
    "numpy",
    "matplotlib",
]
known_first_party = [
    "foo",
]

[tool.pylint.basic]
bad-names=[]

[tool.pylint.messages_control]
# Example: Disable error on needing a module-level docstring
disable=[
    "missing-module-docstring",
    "import-error",
    "invalid-name",
]
