[metadata]
name = foo
description = A Sample Repository to Demonstrate DevOps w/ GitFlow
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
keywords =
    DevOps
    GitHub
    GitFlow
url = https://github.com/skilkis/devops
author = San Kilkis
author_email = sankilkis@msn.com
license = MIT License
license-file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Build Tools

[options]
zip_safe = False  # Can this project run from a zip file? Mostly Not
packages = find:
python_requires = >= 3.7
package_dir =
    = src
tests_require =
    pytest
    pytest-cov

[options.packages.find]
where = src

[options.extras_require]
dev =
    black
    isort
    pylint
    pytest
    pytest-cov
